--- a/2. Correlation Analysis Between Parameters.ipynb
+++ b/2. Correlation Analysis Between Parameters.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 7,
    "id": "b207b850",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 8,
    "id": "a92af113",
    "metadata": {},
    "outputs": [],
@@ -64,6 +64,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "bd886849",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#replace string with integer 1-5 in parameter 13\n",
+    "parameter_13.loc[parameter_13['score'] == 'Άριστο', 'score'] = 5\n",
+    "parameter_13.loc[parameter_13['score'] == 'Πολύ Καλό', 'score'] = 4\n",
+    "parameter_13.loc[parameter_13['score'] == 'Καλό', 'score'] = 3\n",
+    "parameter_13.loc[parameter_13['score'] == 'Μέτριο', 'score'] = 2\n",
+    "parameter_13.loc[parameter_13['score'] == 'Κακό', 'score'] = 1"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "2a517291",
    "metadata": {},
@@ -73,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 10,
    "id": "ef7b0563",
    "metadata": {},
    "outputs": [],
@@ -95,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 11,
    "id": "da9ab75a",
    "metadata": {},
    "outputs": [],
@@ -107,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 12,
    "id": "93f55122",
    "metadata": {},
    "outputs": [
@@ -392,7 +407,7 @@
        "p13  0.421213  0.539415 -0.158320  0.270121  0.385932  1.000000  "
       ]
      },
-     "execution_count": 62,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 13,
    "id": "535b0593",
    "metadata": {},
    "outputs": [
@@ -413,7 +428,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
