--- a/Patient Analysis/Data Analysis for PMOS.ipynb
+++ b/Patient Analysis/Data Analysis for PMOS.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "dca627c9",
+   "id": "a6a09333",
    "metadata": {},
    "source": [
     "# PMOS Analysis "
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 89,
    "id": "8158183b",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 90,
    "id": "eb0780d6",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 91,
    "id": "deac8932",
    "metadata": {},
    "outputs": [
@@ -297,9 +297,33 @@
        "      <td>5</td>\n",
        "      <td>oxi</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>...</td>\n",
+       "      <td>30</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>oxi</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>9 rows × 41 columns</p>\n",
+       "<p>10 rows × 41 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -313,6 +337,7 @@
        "6   4   2   5   3   4   5   5   2   4    5  ...   45          4       3   \n",
        "7   4   5   5   4   5   5   5   4   5    4  ...   60          3       2   \n",
        "8   4   5   4   2   4   4   3   3   2    2  ...   60          1       1   \n",
+       "9   4   5   4   3   5   5   4   5   4    4  ...   30          5       1   \n",
        "\n",
        "   occupation  income  nationality  nursing field  nursing days  \\\n",
        "0           1       2            2              1           5.0   \n",
@@ -324,6 +349,7 @@
        "6           3       2            2              1           NaN   \n",
        "7           1       2            1              2           4.0   \n",
        "8           2       1            1              2           5.0   \n",
+       "9           2       1            1              2           5.0   \n",
        "\n",
        "   safety evaluation                 comments  \n",
        "0                  5                      oxi  \n",
@@ -335,11 +361,12 @@
        "6                  5                      oxi  \n",
        "7                  5                      oxi  \n",
        "8                  5                      oxi  \n",
+       "9                oxi                      NaN  \n",
        "\n",
-       "[9 rows x 41 columns]"
+       "[10 rows x 41 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 92,
    "id": "1e8c3e29",
    "metadata": {},
    "outputs": [],
@@ -362,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c058e9bf",
+   "id": "493e0c62",
    "metadata": {},
    "source": [
     "### Create all parameters and check fro intetrnal cosnistency "
@@ -370,8 +397,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "id": "277295c2",
+   "execution_count": 93,
+   "id": "daf78279",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,8 +419,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "id": "b1622dfb",
+   "execution_count": 94,
+   "id": "27d58eb8",
    "metadata": {},
    "outputs": [
     {
@@ -497,6 +524,14 @@
        "      <td>4</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -511,10 +546,11 @@
        "5   5    5    4    2    4\n",
        "6   5    5    4    4    4\n",
        "7   5    4    4    4    4\n",
-       "8   4    5    4    4    4"
+       "8   4    5    4    4    4\n",
+       "9   4    5    4    4    5"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -528,15 +564,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "id": "66c66c78",
+   "execution_count": 95,
+   "id": "2c845e19",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cronabachs alpha for parameter 1:  -2.430555555555556\n"
+      "Cronabachs alpha for parameter 1:  -2.3876404494382015\n"
      ]
     }
    ],
@@ -548,8 +584,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "id": "db5c002d",
+   "execution_count": 96,
+   "id": "c89ff717",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -561,15 +597,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "id": "05c8494e",
+   "execution_count": 97,
+   "id": "b8213dbe",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cronabachs alpha for parameter 1:  0.7034412955465588\n"
+      "Cronabachs alpha for parameter 1:  0.571043165467626\n"
      ]
     }
    ],
@@ -581,8 +617,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "6f2ad15d",
+   "execution_count": 98,
+   "id": "48ec1f95",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -594,15 +630,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "id": "bcef97cd",
+   "execution_count": 99,
+   "id": "12309755",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cronabachs alpha for parameter 1:  0.2658227848101265\n"
+      "Cronabachs alpha for parameter 1:  0.43421052631578966\n"
      ]
     }
    ],
@@ -614,8 +650,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "id": "eaa99cf5",
+   "execution_count": 100,
+   "id": "670dae44",
    "metadata": {},
    "outputs": [
     {
@@ -699,6 +735,12 @@
        "      <td>3</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -713,10 +755,11 @@
        "5    4    5    4\n",
        "6    2    4    4\n",
        "7    4    3    5\n",
-       "8    4    3    4"
+       "8    4    3    4\n",
+       "9    1    3    4"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -727,8 +770,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
-   "id": "83cf8165",
+   "execution_count": 101,
+   "id": "d1893a62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -743,15 +786,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "id": "fb1f7489",
+   "execution_count": 102,
+   "id": "0d3a528b",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cronabachs alpha for parameter 1:  0.5798816568047337\n"
+      "Cronabachs alpha for parameter 1:  0.5722112645189569\n"
      ]
     }
    ],
@@ -763,8 +806,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "id": "2ed3aa69",
+   "execution_count": 103,
+   "id": "0aab9a3f",
    "metadata": {},
    "outputs": [
     {
@@ -888,6 +931,16 @@
        "      <td>4</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -902,10 +955,11 @@
        "5    5    5   2    2    4    4    5\n",
        "6    2    5   2    2    2    1    2\n",
        "7    4    4   1    4    4    4    4\n",
-       "8    4    2   4    4    4    4    5"
+       "8    4    2   4    4    4    4    5\n",
+       "9    4    4   2    4    4    3    3"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -916,8 +970,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
-   "id": "7704a172",
+   "execution_count": 104,
+   "id": "61acb01f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -928,15 +982,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
-   "id": "f47cf3a1",
+   "execution_count": 105,
+   "id": "c4373271",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cronabachs alpha for parameter 1:  0.10344827586206917\n"
+      "Cronabachs alpha for parameter 1:  0.17142857142857149\n"
      ]
     }
    ],
@@ -951,8 +1005,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
-   "id": "bcd619b8",
+   "execution_count": 106,
+   "id": "5c3f4cb4",
    "metadata": {},
    "outputs": [
     {
@@ -1026,6 +1080,11 @@
        "      <td>5</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -1040,10 +1099,11 @@
        "5    5   4\n",
        "6    3   4\n",
        "7    2   5\n",
-       "8    5   4"
+       "8    5   4\n",
+       "9    5   5"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1054,8 +1114,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
-   "id": "04f0e17f",
+   "execution_count": 107,
+   "id": "e62b3bc6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1065,15 +1125,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
-   "id": "8a54088b",
+   "execution_count": 108,
+   "id": "b07a1f99",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cronabachs alpha for parameter 1:  -1.1171171171171173\n"
+      "Cronabachs alpha for parameter 1:  -2.349206349206347\n"
      ]
     }
    ],
@@ -1085,8 +1145,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
-   "id": "ef0727dc",
+   "execution_count": 109,
+   "id": "8c42691f",
    "metadata": {},
    "outputs": [
     {
@@ -1180,6 +1240,13 @@
        "      <td>4</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -1194,10 +1261,11 @@
        "5   5    3    5    4\n",
        "6   5    4    4    4\n",
        "7   5    3    4    4\n",
-       "8   4    5    4    5"
+       "8   4    5    4    5\n",
+       "9   5    5    2    5"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1208,8 +1276,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
-   "id": "d0bf55cd",
+   "execution_count": 110,
+   "id": "c63f3440",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1219,14 +1287,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "93a7d599",
+   "execution_count": 111,
+   "id": "0010ce3d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# parameter 7\n",
-    "parameter_7 = patients_questions[:][['q7','q14']] \n"
+    "# parameter 8\n",
+    "parameter_7 = patients_questions[:][['q21','q8']] \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6341267e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
