--- a/Patient Analysis/Data Analysis for PMOS.ipynb
+++ b/Patient Analysis/Data Analysis for PMOS.ipynb
@@ -88,7 +88,7 @@
        "      <td>5</td>\n",
        "      <td>3</td>\n",
        "      <td>4</td>\n",
-       "      <td>5</td>\n",
+       "      <td>5.0</td>\n",
        "      <td>5</td>\n",
        "      <td>5</td>\n",
        "      <td>3.0</td>\n",
@@ -112,7 +112,7 @@
        "      <td>5</td>\n",
        "      <td>2</td>\n",
        "      <td>5</td>\n",
-       "      <td>4</td>\n",
+       "      <td>4.0</td>\n",
        "      <td>5</td>\n",
        "      <td>4</td>\n",
        "      <td>2.0</td>\n",
@@ -136,7 +136,7 @@
        "      <td>4</td>\n",
        "      <td>2</td>\n",
        "      <td>5</td>\n",
-       "      <td>5</td>\n",
+       "      <td>5.0</td>\n",
        "      <td>5</td>\n",
        "      <td>4</td>\n",
        "      <td>2.0</td>\n",
@@ -160,7 +160,7 @@
        "      <td>5</td>\n",
        "      <td>2</td>\n",
        "      <td>5</td>\n",
-       "      <td>4</td>\n",
+       "      <td>4.0</td>\n",
        "      <td>5</td>\n",
        "      <td>5</td>\n",
        "      <td>5.0</td>\n",
@@ -184,7 +184,7 @@
        "      <td>5</td>\n",
        "      <td>2</td>\n",
        "      <td>5</td>\n",
-       "      <td>4</td>\n",
+       "      <td>4.0</td>\n",
        "      <td>5</td>\n",
        "      <td>5</td>\n",
        "      <td>5.0</td>\n",
@@ -226,143 +226,143 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>56</th>\n",
+       "      <th>84</th>\n",
        "      <td>5</td>\n",
-       "      <td>4</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
        "      <td>5</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>4</td>\n",
        "      <td>...</td>\n",
-       "      <td>60.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>4.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>1</td>\n",
        "      <td>3.0</td>\n",
        "      <td>7.0</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>5.0</td>\n",
        "      <td>oxi</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>57</th>\n",
+       "      <th>85</th>\n",
        "      <td>5</td>\n",
        "      <td>5</td>\n",
        "      <td>5</td>\n",
        "      <td>2</td>\n",
        "      <td>5</td>\n",
-       "      <td>5</td>\n",
+       "      <td>5.0</td>\n",
        "      <td>5</td>\n",
        "      <td>5</td>\n",
        "      <td>2.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>...</td>\n",
+       "      <td>76.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>oxi</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>86</th>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4.0</td>\n",
        "      <td>5</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>4.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>30.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>5.0</td>\n",
        "      <td>oxi</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>58</th>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
+       "      <th>87</th>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
        "      <td>3</td>\n",
        "      <td>3.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4.0</td>\n",
        "      <td>3</td>\n",
        "      <td>...</td>\n",
-       "      <td>46.0</td>\n",
+       "      <td>48.0</td>\n",
        "      <td>7.0</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>3.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>oxi</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>59</th>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
        "      <td>2</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>...</td>\n",
-       "      <td>51.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1.0</td>\n",
        "      <td>3.0</td>\n",
        "      <td>4.0</td>\n",
+       "      <td>3.0</td>\n",
        "      <td>oxi</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>60</th>\n",
+       "      <th>88</th>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
        "      <td>4</td>\n",
        "      <td>4</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
        "      <td>4</td>\n",
-       "      <td>2</td>\n",
        "      <td>4.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3.0</td>\n",
        "      <td>3</td>\n",
        "      <td>...</td>\n",
-       "      <td>72.0</td>\n",
+       "      <td>31.0</td>\n",
        "      <td>7.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1</td>\n",
        "      <td>3.0</td>\n",
-       "      <td>8.0</td>\n",
+       "      <td>6.0</td>\n",
        "      <td>4.0</td>\n",
        "      <td>oxi</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>61 rows × 41 columns</p>\n",
+       "<p>89 rows × 41 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "    q1  q2  q3  q4  q5  q6  q7  q8   q9  q10  ...   age  education  family  \\\n",
-       "0    4   4   5   3   4   5   5   5  3.0    5  ...  30.0        8.0     3.0   \n",
-       "1    5   5   5   2   5   4   5   4  2.0    5  ...  72.0        4.0     3.0   \n",
-       "2    4   5   4   2   5   5   5   4  2.0    5  ...  58.0        3.0     3.0   \n",
-       "3    5   4   5   2   5   4   5   5  5.0    4  ...  71.0        1.0     3.0   \n",
-       "4    5   4   5   2   5   4   5   5  5.0    4  ...  72.0        1.0     3.0   \n",
-       "..  ..  ..  ..  ..  ..  ..  ..  ..  ...  ...  ...   ...        ...     ...   \n",
-       "56   5   4   3   3   4   4   5   3  4.0    4  ...  60.0        7.0     2.0   \n",
-       "57   5   5   5   2   5   5   5   5  2.0    5  ...   NaN        3.0     3.0   \n",
-       "58   5   5   5   1   5   5   5   3  3.0    3  ...  46.0        7.0     2.0   \n",
-       "59   3   3   3   3   3   3   3   2  4.0    3  ...  51.0        4.0     2.0   \n",
-       "60   4   4   3   3   3   3   4   2  4.0    3  ...  72.0        7.0     1.0   \n",
+       "    q1  q2  q3  q4  q5   q6  q7  q8   q9  q10  ...   age  education  family  \\\n",
+       "0    4   4   5   3   4  5.0   5   5  3.0    5  ...  30.0        8.0     3.0   \n",
+       "1    5   5   5   2   5  4.0   5   4  2.0    5  ...  72.0        4.0     3.0   \n",
+       "2    4   5   4   2   5  5.0   5   4  2.0    5  ...  58.0        3.0     3.0   \n",
+       "3    5   4   5   2   5  4.0   5   5  5.0    4  ...  71.0        1.0     3.0   \n",
+       "4    5   4   5   2   5  4.0   5   5  5.0    4  ...  72.0        1.0     3.0   \n",
+       "..  ..  ..  ..  ..  ..  ...  ..  ..  ...  ...  ...   ...        ...     ...   \n",
+       "84   5   5   5   2   4  NaN   4   4  2.0    4  ...  42.0        4.0     1.0   \n",
+       "85   5   5   5   2   5  5.0   5   5  2.0    5  ...  76.0        1.0     2.0   \n",
+       "86   4   4   4   2   5  4.0   5   5  4.0    5  ...   NaN        4.0     1.0   \n",
+       "87   3   3   3   3   3  3.0   4   2  4.0    3  ...  48.0        7.0     3.0   \n",
+       "88   5   5   4   4   4  4.0   5   2  3.0    3  ...  31.0        7.0     1.0   \n",
        "\n",
        "    occupation  income  nationality  nursing field  nursing days  \\\n",
        "0          1.0     2.0            2            1.0           5.0   \n",
@@ -371,11 +371,11 @@
        "3          3.0     1.0            1            2.0           7.0   \n",
        "4          3.0     1.0            1            2.0           7.0   \n",
        "..         ...     ...          ...            ...           ...   \n",
-       "56         1.0     2.0            1            3.0           7.0   \n",
-       "57         3.0     1.0            1            3.0          30.0   \n",
-       "58         1.0     2.0            1            2.0          22.0   \n",
-       "59         1.0     1.0            1            1.0           3.0   \n",
-       "60         1.0     1.0            1            3.0           8.0   \n",
+       "84         1.0     1.0            1            3.0           7.0   \n",
+       "85         3.0     1.0            1            1.0         150.0   \n",
+       "86         1.0     1.0            2            2.0           2.0   \n",
+       "87         1.0     2.0            2            3.0           4.0   \n",
+       "88         1.0     1.0            1            3.0           6.0   \n",
        "\n",
        "    safety evaluation                 comments  \n",
        "0                 5.0                      oxi  \n",
@@ -384,13 +384,13 @@
        "3                 5.0  Peristeria ston thalamo  \n",
        "4                 5.0  peristeria ston thalamo  \n",
        "..                ...                      ...  \n",
-       "56                4.0                      oxi  \n",
-       "57                5.0                      oxi  \n",
-       "58                5.0                      oxi  \n",
-       "59                4.0                      oxi  \n",
-       "60                4.0                      oxi  \n",
+       "84                5.0                      oxi  \n",
+       "85                5.0                      oxi  \n",
+       "86                5.0                      oxi  \n",
+       "87                3.0                      oxi  \n",
+       "88                4.0                      oxi  \n",
        "\n",
-       "[61 rows x 41 columns]"
+       "[89 rows x 41 columns]"
       ]
      },
      "execution_count": 7,
@@ -477,7 +477,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cronabachs alpha for parameter 1:  0.7249724394981365\n"
+      "Cronabachs alpha for parameter 1:  0.7003125000000001\n"
      ]
     }
    ],
@@ -510,7 +510,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cronabachs alpha for parameter 1:  0.6098243074290979\n"
+      "Cronabachs alpha for parameter 1:  0.6578789334614463\n"
      ]
     }
    ],
@@ -543,7 +543,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cronabachs alpha for parameter 1:  0.0017292490118578363\n"
+      "Cronabachs alpha for parameter 1:  0.14636349947297067\n"
      ]
     }
    ],
@@ -623,38 +623,38 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>56</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
+       "      <th>84</th>\n",
        "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>57</th>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>58</th>\n",
        "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>85</th>\n",
+       "      <td>4</td>\n",
        "      <td>1</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>59</th>\n",
-       "      <td>3</td>\n",
+       "      <th>86</th>\n",
+       "      <td>4</td>\n",
        "      <td>2</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>60</th>\n",
-       "      <td>3</td>\n",
+       "      <th>87</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>88</th>\n",
+       "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>61 rows × 3 columns</p>\n",
+       "<p>89 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -665,13 +665,13 @@
        "3     4    4    5\n",
        "4     4    4    5\n",
        "..  ...  ...  ...\n",
-       "56    2    2    4\n",
-       "57    4    2    5\n",
-       "58    3    1    5\n",
-       "59    3    2    4\n",
-       "60    3    2    4\n",
+       "84    4    3    4\n",
+       "85    4    1    5\n",
+       "86    4    2    4\n",
+       "87    2    2    4\n",
+       "88    1    2    4\n",
        "\n",
-       "[61 rows x 3 columns]"
+       "[89 rows x 3 columns]"
       ]
      },
      "execution_count": 16,
@@ -721,7 +721,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cronabachs alpha for parameter 1:  0.7607636792117244\n"
+      "Cronabachs alpha for parameter 1:  0.7524569459784063\n"
      ]
     }
    ],
@@ -829,58 +829,58 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>56</th>\n",
+       "      <th>84</th>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4.0</td>\n",
        "      <td>4</td>\n",
        "      <td>4</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>57</th>\n",
+       "      <th>85</th>\n",
        "      <td>5</td>\n",
        "      <td>5</td>\n",
        "      <td>4.0</td>\n",
-       "      <td>6</td>\n",
        "      <td>4</td>\n",
        "      <td>4</td>\n",
+       "      <td>2</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>58</th>\n",
+       "      <th>86</th>\n",
        "      <td>5</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>4</td>\n",
        "      <td>1</td>\n",
-       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>59</th>\n",
-       "      <td>4</td>\n",
+       "      <th>87</th>\n",
+       "      <td>3</td>\n",
        "      <td>3</td>\n",
        "      <td>2.0</td>\n",
        "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>60</th>\n",
+       "      <td>4</td>\n",
        "      <td>4</td>\n",
        "      <td>3</td>\n",
-       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>88</th>\n",
        "      <td>3</td>\n",
        "      <td>3</td>\n",
-       "      <td>2</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>61 rows × 7 columns</p>\n",
+       "<p>89 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -891,13 +891,13 @@
        "3     5    4  1.0    4    4    5    1\n",
        "4     5    4  1.0    4    4    5    1\n",
        "..  ...  ...  ...  ...  ...  ...  ...\n",
-       "56    4    4  2.0    2    3    2    2\n",
-       "57    5    5  4.0    6    4    4    4\n",
-       "58    5    3  3.0    4    4    1    4\n",
-       "59    4    3  2.0    2    2    2    2\n",
-       "60    4    3  2.0    3    3    2    3\n",
+       "84    5    4  4.0    4    4    4    4\n",
+       "85    5    5  4.0    4    4    2    4\n",
+       "86    5    5  2.0    4    1    1    1\n",
+       "87    3    3  2.0    2    4    4    3\n",
+       "88    3    3  3.0    3    3    3    3\n",
        "\n",
-       "[61 rows x 7 columns]"
+       "[89 rows x 7 columns]"
       ]
      },
      "execution_count": 19,
@@ -931,7 +931,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cronabachs alpha for parameter 1:  0.6123884230457128\n"
+      "Cronabachs alpha for parameter 1:  0.47853519732772476\n"
      ]
     }
    ],
@@ -975,7 +975,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cronabachs alpha for parameter 1:  0.7126223596084491\n"
+      "Cronabachs alpha for parameter 1:  0.7232499911142677\n"
      ]
     }
    ],
