clena staff data by hand

--- a/Staff Analysis/Analysis/Correlation Analysis/Parameter1_Analysis.ipynb
+++ b/Staff Analysis/Analysis/Correlation Analysis/Parameter1_Analysis.ipynb
@@ -36,7 +36,7 @@
    "id": "f7af3edc",
    "metadata": {},
    "source": [
-    "## Open communication Correlation"
+    "## P1 : Open communication / Correlation Analysis"
    ]
   },
   {
