parameter2 correlation of age and proffesion

--- a/Staff Analysis/Analysis/4. Positive Answer Charts for every Questione and Parameter.ipynb
+++ b/Staff Analysis/Analysis/4. Positive Answer Charts for every Questione and Parameter.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 19,
    "id": "18cca55d",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 20,
    "id": "629ce6c2",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 21,
    "id": "0beac42d",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 22,
    "id": "2a9cbd96",
    "metadata": {},
    "outputs": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 23,
    "id": "2d7b45c0",
    "metadata": {},
    "outputs": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 24,
    "id": "2f32d525",
    "metadata": {},
    "outputs": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 25,
    "id": "90f7c636",
    "metadata": {},
    "outputs": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 26,
    "id": "363f6359",
    "metadata": {},
    "outputs": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 27,
    "id": "3b8fad81",
    "metadata": {},
    "outputs": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 28,
    "id": "80beedfc",
    "metadata": {},
    "outputs": [
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 29,
    "id": "f1314da4",
    "metadata": {},
    "outputs": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 30,
    "id": "c769a146",
    "metadata": {},
    "outputs": [
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 31,
    "id": "ba8d415a",
    "metadata": {},
    "outputs": [
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 32,
    "id": "e479f71a",
    "metadata": {},
    "outputs": [
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 33,
    "id": "cca5be71",
    "metadata": {},
    "outputs": [
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 34,
    "id": "6787cae9",
    "metadata": {},
    "outputs": [
@@ -352,7 +352,7 @@
        " 0.5720954356846473]"
       ]
      },
-     "execution_count": 196,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 35,
    "id": "1ab34e92",
    "metadata": {},
    "outputs": [
@@ -384,14 +384,14 @@
        " 57.209543568464724]"
       ]
      },
-     "execution_count": 197,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "allPositive = list(map(lambda item: item * 100, allPositive))\n",
-    "result"
+    "allPositive"
    ]
   },
   {
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 233,
    "id": "49b0536d",
    "metadata": {},
    "outputs": [
@@ -465,12 +465,14 @@
     "\n",
     "# Show Plot\n",
     "plt.yticks(fontsize=17)\n",
+    "plt.savefig(\"last.png\")\n",
+    "\n",
     "plt.show()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 234,
    "id": "cad87265",
    "metadata": {},
    "outputs": [],
@@ -531,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 38,
    "id": "78a126bc",
    "metadata": {},
    "outputs": [
@@ -561,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 39,
    "id": "7da2831b",
    "metadata": {},
    "outputs": [
@@ -591,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 40,
    "id": "438f6aa9",
    "metadata": {},
    "outputs": [
@@ -621,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 41,
    "id": "c4e439cf",
    "metadata": {},
    "outputs": [
@@ -651,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 42,
    "id": "1f521f3d",
    "metadata": {},
    "outputs": [
@@ -681,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 43,
    "id": "ceb15684",
    "metadata": {},
    "outputs": [
@@ -711,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 44,
    "id": "e1e03ff0",
    "metadata": {},
    "outputs": [
@@ -741,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 45,
    "id": "31048ec3",
    "metadata": {},
    "outputs": [
@@ -771,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 46,
    "id": "6b0e5601",
    "metadata": {},
    "outputs": [
@@ -801,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 47,
    "id": "11e59a9a",
    "metadata": {},
    "outputs": [
@@ -832,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 48,
    "id": "749daa05",
    "metadata": {},
    "outputs": [
@@ -862,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 49,
    "id": "e98bbc99",
    "metadata": {},
    "outputs": [
@@ -892,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 50,
    "id": "490efb63",
    "metadata": {},
    "outputs": [
@@ -954,7 +956,7 @@
        "Κακό       0.017094"
       ]
      },
-     "execution_count": 226,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
