--- a/Patient Analysis/Data Analysis for PMOS.ipynb
+++ b/Patient Analysis/Data Analysis for PMOS.ipynb
@@ -13,7 +13,17 @@
    "execution_count": 1,
    "id": "8158183b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/stathis/opt/anaconda3/lib/python3.9/site-packages/outdated/utils.py:14: OutdatedPackageWarning: The package outdated is out of date. Your version is 0.2.1, the latest is 0.2.2.\n",
+      "Set the environment variable OUTDATED_IGNORE=1 to disable these warnings.\n",
+      "  return warn(\n"
+     ]
+    }
+   ],
    "source": [
     "# Libraries\n",
     "import pandas as pd\n",
@@ -226,11 +236,11 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>129</th>\n",
+       "      <th>168</th>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
        "      <td>5</td>\n",
        "      <td>2</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
        "      <td>5</td>\n",
        "      <td>5.0</td>\n",
        "      <td>5</td>\n",
@@ -238,116 +248,116 @@
        "      <td>5.0</td>\n",
        "      <td>5</td>\n",
        "      <td>...</td>\n",
-       "      <td>34.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>oxi</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>130</th>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>...</td>\n",
-       "      <td>83.0</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.0</td>\n",
        "      <td>3.0</td>\n",
        "      <td>3.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>oxi</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>131</th>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
+       "      <th>169</th>\n",
        "      <td>5</td>\n",
-       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
        "      <td>5</td>\n",
        "      <td>5.0</td>\n",
        "      <td>5</td>\n",
        "      <td>5</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>5.0</td>\n",
        "      <td>5</td>\n",
        "      <td>...</td>\n",
-       "      <td>71.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>67.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>3.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1</td>\n",
        "      <td>2.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>oxi</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>170</th>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>oxi</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>132</th>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>...</td>\n",
-       "      <td>62.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>3.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>oxi</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>133</th>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>3</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>oxi</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>171</th>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
        "      <td>5.0</td>\n",
        "      <td>5</td>\n",
-       "      <td>4</td>\n",
+       "      <td>5</td>\n",
        "      <td>5.0</td>\n",
        "      <td>5</td>\n",
        "      <td>...</td>\n",
-       "      <td>73.0</td>\n",
+       "      <td>51.0</td>\n",
        "      <td>4.0</td>\n",
        "      <td>3.0</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>27.0</td>\n",
+       "      <td>8.0</td>\n",
        "      <td>5.0</td>\n",
+       "      <td>oxi</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>172</th>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>...</td>\n",
+       "      <td>59.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.0</td>\n",
        "      <td>oxi</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>134 rows × 41 columns</p>\n",
+       "<p>173 rows × 41 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -358,11 +368,11 @@
        "3     5   4   5   2   5  4.0   5   5  5.0    4  ...  71.0        1.0     3.0   \n",
        "4     5   4   5   2   5  4.0   5   5  5.0    4  ...  72.0        1.0     3.0   \n",
        "..   ..  ..  ..  ..  ..  ...  ..  ..  ...  ...  ...   ...        ...     ...   \n",
-       "129   5   2   5   5   5  5.0   5   5  5.0    5  ...  34.0        7.0     1.0   \n",
-       "130   4   4   3   4   4  4.0   4   4  4.0    4  ...  83.0        4.0     3.0   \n",
-       "131   4   4   5   2   5  5.0   5   5  2.0    5  ...  71.0        6.0     3.0   \n",
-       "132   5   5   5   2   5  2.0   5   5  5.0    5  ...  62.0        4.0     3.0   \n",
-       "133   5   5   5   2   3  5.0   5   4  5.0    5  ...  73.0        4.0     3.0   \n",
+       "168   5   5   5   2   5  5.0   5   5  5.0    5  ...   NaN        3.0     3.0   \n",
+       "169   5   5   5   5   5  5.0   5   5  5.0    5  ...  67.0        1.0     2.0   \n",
+       "170   5   5   5   2   4  4.0   5   4  4.0    4  ...   NaN        5.0     2.0   \n",
+       "171   5   5   5   5   5  5.0   5   5  5.0    5  ...  51.0        4.0     3.0   \n",
+       "172   5   5   5   2   4  4.0   4   4  2.0    4  ...  59.0        4.0     1.0   \n",
        "\n",
        "     occupation  income  nationality  nursing field  nursing days  \\\n",
        "0           1.0     2.0            2            1.0           5.0   \n",
@@ -371,11 +381,11 @@
        "3           3.0     1.0            1            2.0           7.0   \n",
        "4           3.0     1.0            1            2.0           7.0   \n",
        "..          ...     ...          ...            ...           ...   \n",
-       "129         1.0     2.0            2            2.0           9.0   \n",
-       "130         3.0     1.0            1            2.0          14.0   \n",
-       "131         3.0     1.0            1            2.0           NaN   \n",
-       "132         2.0     1.0            1            2.0          11.0   \n",
-       "133         3.0     1.0            1            2.0          27.0   \n",
+       "168         3.0     1.0            1            1.0           NaN   \n",
+       "169         3.0     1.0            1            2.0           4.0   \n",
+       "170         1.0     1.0            3            3.0           3.0   \n",
+       "171         1.0     1.0            1            2.0           8.0   \n",
+       "172         1.0     1.0            1            2.0           4.0   \n",
        "\n",
        "     safety evaluation                 comments  \n",
        "0                  5.0                      oxi  \n",
@@ -384,13 +394,13 @@
        "3                  5.0  Peristeria ston thalamo  \n",
        "4                  5.0  peristeria ston thalamo  \n",
        "..                 ...                      ...  \n",
-       "129                5.0                      oxi  \n",
-       "130                5.0                      oxi  \n",
-       "131                5.0                      oxi  \n",
-       "132                5.0                      oxi  \n",
-       "133                5.0                      oxi  \n",
+       "168                4.0                      NaN  \n",
+       "169                3.0                      oxi  \n",
+       "170                3.0                      oxi  \n",
+       "171                5.0                      oxi  \n",
+       "172                4.0                      oxi  \n",
        "\n",
-       "[134 rows x 41 columns]"
+       "[173 rows x 41 columns]"
       ]
      },
      "execution_count": 3,
@@ -477,7 +487,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cronabachs alpha for parameter 1:  0.6987535100335593\n"
+      "Cronabachs alpha for parameter 1:  0.7031206254549527\n"
      ]
     }
    ],
@@ -510,7 +520,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cronabachs alpha for parameter 1:  0.5899526259993816\n"
+      "Cronabachs alpha for parameter 1:  0.4531557253063076\n"
      ]
     }
    ],
@@ -543,7 +553,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cronabachs alpha for parameter 1:  0.07319141339759916\n"
+      "Cronabachs alpha for parameter 1:  0.008880719744606635\n"
      ]
     }
    ],
@@ -623,38 +633,38 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>129</th>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>130</th>\n",
+       "      <th>168</th>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
-       "      <td>4</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>131</th>\n",
-       "      <td>4</td>\n",
-       "      <td>6</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>132</th>\n",
-       "      <td>4</td>\n",
+       "      <th>169</th>\n",
+       "      <td>3</td>\n",
        "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>170</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>171</th>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>133</th>\n",
+       "      <th>172</th>\n",
        "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>134 rows × 3 columns</p>\n",
+       "<p>173 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -665,13 +675,13 @@
        "3      4    4    5\n",
        "4      4    4    5\n",
        "..   ...  ...  ...\n",
-       "129    4    1    5\n",
-       "130    2    2    4\n",
-       "131    4    6    4\n",
-       "132    4    1    5\n",
-       "133    4    1    5\n",
+       "168    2    2    3\n",
+       "169    3    1    4\n",
+       "170    3    1    4\n",
+       "171    5    4    5\n",
+       "172    4    2    2\n",
        "\n",
-       "[134 rows x 3 columns]"
+       "[173 rows x 3 columns]"
       ]
      },
      "execution_count": 12,
@@ -721,7 +731,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cronabachs alpha for parameter 1:  0.6816645093442354\n"
+      "Cronabachs alpha for parameter 1:  0.6445862759959982\n"
      ]
     }
    ],
@@ -829,7 +839,7 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>129</th>\n",
+       "      <th>168</th>\n",
        "      <td>5</td>\n",
        "      <td>5</td>\n",
        "      <td>1.0</td>\n",
@@ -839,40 +849,40 @@
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>130</th>\n",
+       "      <th>169</th>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>170</th>\n",
+       "      <td>5</td>\n",
        "      <td>4</td>\n",
        "      <td>2.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
        "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>131</th>\n",
+       "      <th>171</th>\n",
        "      <td>5</td>\n",
        "      <td>5</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>172</th>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
        "      <td>4.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>132</th>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>133</th>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1.0</td>\n",
        "      <td>4</td>\n",
        "      <td>4</td>\n",
        "      <td>4</td>\n",
@@ -880,7 +890,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>134 rows × 7 columns</p>\n",
+       "<p>173 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -891,13 +901,13 @@
        "3      5    4  1.0    4    4    5    1\n",
        "4      5    4  1.0    4    4    5    1\n",
        "..   ...  ...  ...  ...  ...  ...  ...\n",
-       "129    5    5  1.0    4    4    4    4\n",
-       "130    4    4  2.0    4    4    4    4\n",
-       "131    5    5  4.0    2    4    4    2\n",
-       "132    5    5  1.0    4    4    4    4\n",
-       "133    5    5  1.0    4    4    4    4\n",
+       "168    5    5  1.0    4    4    4    4\n",
+       "169    5    5  1.0    4    4    4    1\n",
+       "170    5    4  2.0    3    3    4    5\n",
+       "171    5    5  1.0    5    5    5    5\n",
+       "172    4    4  4.0    4    4    4    4\n",
        "\n",
-       "[134 rows x 7 columns]"
+       "[173 rows x 7 columns]"
       ]
      },
      "execution_count": 15,
@@ -931,7 +941,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cronabachs alpha for parameter 1:  0.398389946986059\n"
+      "Cronabachs alpha for parameter 1:  0.4584191153534216\n"
      ]
     }
    ],
@@ -975,7 +985,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cronabachs alpha for parameter 1:  0.6796798948530368\n"
+      "Cronabachs alpha for parameter 1:  0.6783291259764366\n"
      ]
     }
    ],
@@ -1011,17 +1021,7 @@
    "execution_count": 23,
    "id": "0010ce3d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/stathis/opt/anaconda3/lib/python3.9/site-packages/outdated/utils.py:14: OutdatedPackageWarning: The package outdated is out of date. Your version is 0.2.1, the latest is 0.2.2.\n",
-      "Set the environment variable OUTDATED_IGNORE=1 to disable these warnings.\n",
-      "  return warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# parameter 8\n",
     "parameter_7 = patients_questions[:][['q21','q8']] \n"
